Updated TaskManagementUserDetails to store user role