@@ -1,11 +1,12 @@
 package taskmanagement.security;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import taskmanagement.model.entity.TaskManagementUser;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class TaskManagementUserDetails implements UserDetails {
     private final TaskManagementUser user;
@@ -16,7 +17,7 @@ public class TaskManagementUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(user.getRole().name()));
     }
 
     @Override
